--- a/src/styles/InformationModal.css
+++ b/src/styles/InformationModal.css
@@ -109,7 +109,7 @@
 
 /* Submit button */
 .modal-submit-button {
-  background: #28a745;
+  background: #006919;
   color: #fff;
   border: none;
   padding: 0.75rem 1.5rem;
@@ -121,11 +121,11 @@
 }
 
 .modal-submit-button:hover {
-  background: #218838;
+  background: #005b14;
 }
 
 .modal-submit-button:focus {
-  outline: 2px solid #218838;
+  outline: 2px solid #00390c;
   outline-offset: 2px;
 }
 
